--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,37 +1,32 @@
-nmae:model_train
-permissions:
+name: model_train  
+permissions: 
   id-token: write
-  content: write
+  contents: write  
 
 on:
-  - push
+  - push          
 
 jobs:
   run:
-    runs-on:
-      - ubuntu-latest
+    runs-on: 
+      - ubuntu-latest  
     steps:
-      - uses: interactive/setup-cml@v1
+      - uses: iterative/setup-cml@v1   
       - uses: actions/checkout@v3
       - name: train model
         env:
-          REPO_TOKEN: $({secrets.GITHUB_TOKEN)}
-          
-        run:
-          pip install - r requirements.txt
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
+
+        run: |
+          pip install -r requirements.txt   # Removed extra space after '-r'
           python train_model.py
 
-          echo "RF and LR Model Score"  > report.md
-          cat report.txt
+          echo "RF and LR Model Score" > report.md
+          cat report.txt >> report.md   # Append the contents of 'report.txt' to 'report.md'
 
           echo "Confusion matrix & Feature Importance" > report1.md
           echo '![](./ConfusionMatrix.png "ConfusionMatrix")' >> report1.md
           echo '![](./FeatureImportance.png "FeatureImportance")' >> report1.md
 
           cat report.md report1.md > combined_file.md
-          cml comment create combined_file.md 
-
-
-
-
-          
+          cml comment create combined_file.md
