--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -18,11 +18,11 @@ jobs:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
 
         run: |
-          pip install -r requirements.txt   # Removed extra space after '-r'
+          pip install -r requirements.txt   
           python train_model.py
 
           echo "RF and LR Model Score" > report.md
-          cat report.txt >> report.md   # Append the contents of 'report.txt' to 'report.md'
+          cat report.txt >> report.md   
 
           echo "Confusion matrix & Feature Importance" > report1.md
           echo '![](./ConfusionMatrix.png "ConfusionMatrix")' >> report1.md
