--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -22,7 +22,7 @@ jobs:
           python train_model.py
 
           echo "RF and LR Model Score" > report.md
-          cat report.txt >> report.md   
+          cat scores.txt >> report.md   
 
           echo "Confusion matrix & Feature Importance" > report1.md
           echo '![](./ConfusionMatrix.png "ConfusionMatrix")' >> report1.md
